--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Connor's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
-  <body style="background-color: #f5edc4;">
+  <body>
     <table cellspacing="20">
       <tr>
         <td><img src="https://0.academia-photos.com/113023772/26991426/25429359/s200_connor.skudlarek.jpg" alt="A Picture of Connor"></td>
